# zappy

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: sync-to-gitea.yml
client/: README.md  client  pyproject.toml  stub.py
client/tests/: test_stub_usage.py
docs/: AGENT_WORKFLOW.md  PRD.md  SDS.md  ticket-tracker.md
docs/handoff-notes/: A01-repo-scaffold.md  A02-wrapper-stubs.md  A03-lint-test-harness.md  A04-readme-quickstart.md  S01-server-cli-parse.md  S02-tcp-listen-welcome.md  S03-handshake.md  S04-world-resources.md  S05-player-spawn.md  S06-time-queue.md  S07-movement.md  S08-see-vision.md  S09-pick-drop-inventory.md  S10-hunger-death.md  S11-kick.md  S12-broadcast.md  _template.md
docs/raw/: audit.md  requirements.md
gui/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
gui/src/: scaffold.ts
scripts/: README.md  check.sh  ensure-dev-tools.sh  test_check_harness.py  test_readme_quickstart.py  test_scaffold.py  test_wrappers.py
server/: Cargo.toml  README.md  server  stub.sh
server/src/: broadcast.rs  cli.rs  commands.rs  kick.rs  lib.rs  main.rs  net.rs  player.rs  time.rs  vision.rs  world.rs
