[package]
name = "zappy_server"
version = "0.1.0"
edition = "2021"
description = "Zappy TCP game server (Rust)"
license = "MIT"
publish = false

[lib]
name = "zappy_server"
path = "src/lib.rs"

[[bin]]
name = "zappy-server"
path = "src/main.rs"

[dependencies]
# Multiplexed non-blocking TCP (S02 / RQ16). `os-poll` + `net` are required for
# Poll + TcpListener/TcpStream on all supported platforms.
mio = { version = "1", features = ["net", "os-poll"] }
